# nimble

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rae.ps1
benches/: simple_bench.rs  vm_benchmark.rs
benchmarks/: README.md
benchmarks/fibonacci/: main.nmb  main.py
docs/: getting-started.md  syntax.md
docs/stdlib/: io.md  json.md  list.md  map.md  math.md  net.md  os.md  path.md  process.md  regex.md  string.md  time.md
examples/: README.md
examples/basic/control/: conditionals.nmb  loops.nmb
examples/basic/data/: collections.nmb  lists.nmb  maps.nmb
examples/basic/errors/: errors.nmb  propagation.nmb
examples/basic/functions/: defs.nmb  recursion.nmb
examples/stdlib/io/: file_ops.nmb  load_test.nmb  stream_tools.nmb
examples/stdlib/json/: config.nmb  roundtrip.nmb
examples/stdlib/list/: filters.nmb  sort_slice.nmb
examples/stdlib/map/: keys_values.nmb  merge.nmb
examples/stdlib/math/: random_lookup.nmb  statistics.nmb
examples/stdlib/net/: fetch.nmb  http_fetch.nmb
examples/stdlib/os/: args.nmb  env.nmb
examples/stdlib/path/: join.nmb  resolve.nmb
examples/stdlib/process/: pipeline.nmb  run_echo.nmb
examples/stdlib/regex/: extract.nmb  match_replace.nmb
examples/stdlib/string/: formatting.nmb  normalize.nmb
examples/stdlib/time/: countdown.nmb  timer.nmb
src/: lib.rs  main.rs
src/compiler/: bytecode.rs  compiler.rs  mod.rs  register.rs
src/compiler/ir/: mod.rs
src/compiler/jit/: emitter.rs  ic.rs  mod.rs
src/compiler/legacy/: mod.rs  register.rs
src/compiler/passes/: const_fold.rs  dce.rs  mod.rs
src/error/: error.rs  mod.rs
src/jit/: cache.rs  codegen.rs  jit.rs  mod.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/modules/: fetcher.rs  mod.rs  registry.rs  resolver.rs
src/parser/: ast.rs  mod.rs  parser.rs
src/repl/: mod.rs  repl.rs
src/types/: infer.rs  mod.rs  ty.rs
src/vm/: builtins.rs  frame.rs  mod.rs  nan_value.rs  pool.rs  profiling.rs  safepoint.rs  tier.rs  value.rs  vm.rs
src/vm/builtins/: collections.rs  core.rs  ffi.rs  io.rs  json.rs  math.rs  mod.rs  net.rs  os.rs  regex.rs  time.rs
src/vm/legacy/: frame.rs  mod.rs  vm.rs
stdlib/io/: mod.nmb
stdlib/json/: mod.nmb
stdlib/list/: mod.nmb
stdlib/map/: mod.nmb
stdlib/math/: mod.nmb
stdlib/net/: mod.nmb
stdlib/os/: mod.nmb
stdlib/path/: mod.nmb
stdlib/process/: mod.nmb
stdlib/regex/: mod.nmb
stdlib/string/: mod.nmb
stdlib/time/: mod.nmb
(+3 files in other folders)
