[package]
name = "nimble"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false }
thiserror = "1.0"
miette = { version = "7.6", default-features = false, features = ["derive", "fancy", "syntect-highlighter"] }
syntect = "5"
once_cell = "1.18"

clap = { version = "4.4", default-features = false, features = ["derive", "std"] }

colored = { version = "2.0", default-features = false }
rustyline = { version = "12.0", default-features = false }

regex = { version = "1.10", default-features = false, features = ["std", "perf"] }

reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

cranelift = { version = "0.100", default-features = false }
cranelift-jit = { version = "0.100", default-features = false }
cranelift-module = { version = "0.100", default-features = false }
cranelift-native = { version = "0.100", default-features = false }

target-lexicon = "0.12"

lazy_static = "1.4"
walkdir = "2.4"

git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }

[lib]
name = "nimble_core"
path = "src/lib.rs"

[[bin]]
name = "nimble"
path = "src/main.rs"

[profile.dev]
opt-level = 1
debug = true
incremental = true
lto = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
