[package]
name = "nimble"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.49"
colored = "2.0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["blocking"] }
regex = "1.10.0"
rand = "0.8.5"
rustyline = "11.0.0"
owo-colors = "3.5.0"
libffi = "3"
libloading = "0.8"

# JIT Dependencies
# (removed)

[[bin]]
name = "simple_bench"
path = "benches/simple_bench.rs"

[lib]
name = "nimble"
path = "src/lib.rs"

[profile.dev]
opt-level = 1
debug = true
incremental = true
lto = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
